# ddr

./: .gitignore  .pre-commit-config.yaml  .pyiceberg.yaml  NOTICE.txt  README.md  mkdocs.yml  pydantic_config.yaml  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/templates/: pull_request.md
.github/templates/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: test_and_lint.yaml  website_build.yaml
config/: evaluation_config.yaml  example_config.yaml  training_config.yaml
config/hydra/: settings.yaml
datasets/: README.md
datasets/dhbv2_merit/: download.ipynb  nc_to_icechunk.ipynb
docs/: README.md  gpu.md  index.md  references.md  requirements.txt  startup.md
docs/about/: datasets.md  engine.md  gpu.md
docs/engine/: index.md
docs/home/: contributions.md  notice.md  references.md
docs/js/: mathjax-config.js
docs/quickstart/: index.md
docs/usage/: examples.md  index.md  routing.md  summed_q_prime.md  test.md  train.md
engine/: README.md  REAME.md  adjacency.py  build_gage_adjacency.py  build_warehouse.py  gages_adjacency.py  intersect_merit_and_hydro.py  pyproject.toml  weighted_transfer.py
engine/hydrofabric/v2_2/: adjacency.py  gages_adjacency.py
engine/merit/: adjacency.py  gages_adjacency.py
engine/scripts/: build_hydrofabric_v2.2_matrices.py  build_merit_matrices.py
engine/src/ddr_engine/: __init__.py
engine/src/ddr_engine/hydrofabric/: __init__.py
engine/src/ddr_engine/hydrofabric/v2_2/: adjacency.py  gages_adjacency.py
engine/src/ddr_engine/merit/: __init__.py  adjacency.py  gages_adjacency.py  utils.py
engine/tests/: test_adjacency.py
examples/eval/: evaluate.ipynb  evaluate_ensemble.ipynb  example_config.yaml
examples/parameter_maps/: ddr_v0.1.0a2_trained_model_weights.pt  example_config.yaml  plot_parameter_map.ipynb
hooks/: socialmedia.py
scripts/: calculate_q_prime.py  eval.py  forward_eval.py  q_prime_eval.py  router.py  run_bmi.py  sim.py  summed_q_prime.py  test.py  train.py
src/ddr/: __init__.py  bmi.py
src/ddr/analysis/: __init__.py  metrics.py  plots.py  utils.py
src/ddr/dataset/: Dates.py  Gauges.py  __init__.py  attributes.py  eval_dataset.py  forward_eval_dataset.py  large_scale_dataset.py  mapping.py  observations.py  statistics.py  streamflow.py  test_dataset.py  train_dataset.py  utils.py
src/ddr/nn/: __init__.py  kan.py
src/ddr/routing/: __init__.py  dmc.py  mmc.py  torch_mc.py  utils.py
src/ddr/validation/: __init__.py  metrics.py  plots.py  utils.py  validate_configs.py
tests/: __init__.py  conftest.py  test_adjacency.py  test_gages_adjacency.py
tests/dataset/: conftest.py  test_icechunk.py  test_streamflow_reader.py  test_utils.py
tests/engine/: conftest.py  test_adjacency.py  test_gages_adjacency.py
tests/engine/hydrofabric/v2.2/: test_adjacency.py  test_gages_adjacency.py
tests/engine/merit/: test_merit_flowpaths.py
tests/routing/: __init__.py  gradient_utils.py  test_dmc.py  test_mmc.py  test_torch_mc.py  test_utils.py  test_validation.py
