[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "ddr"
description = "Differentiable modeling framework"
readme = "README.md"
dynamic = ["version"] 
requires-python = ">=3.9.0"
license = {file = "LICENSE"}
authors = [
    {name = "Tadd Bindas"},
]
maintainers = [
    {name = "Tadd Bindas", email = "taddbindas@gmail.com"},
]

[tool.hatch.metadata]
allow-direct-references = true

dependencies = [
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "geopandas==1.0.1",
    "pydantic==2.10.6",
    "xarray==2025.1.2",
    "scipy==1.15.1",
    "netCDF4==3.4.2",
    "hydra-core==1.3.2",
    "tqdm==4.67.1",
    "polars==1.21.0",
    "zarr==3.0.2",
    "sympy==1.13.1",
    "pykan==0.2.8",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.0",
    "binsparse @ git+https://github.com/ivirshup/binsparse-python.git@main",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/ddr/_version.py"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
jupyter = [
    "ipykernel",
    "jupyterlab",
]
