[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/ddr/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ddr"
description = "Differentiable modeling framework"
readme = "README.md"
dynamic = ["version"] 
requires-python = ">=3.11.0"
license = {file = "LICENSE"}
authors = [
    {name = "Tadd Bindas"},
]
maintainers = [
    {name = "Tadd Bindas", email = "taddbindas@gmail.com"},
]

dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "geopandas==1.0.1",
    "pydantic==2.10.6",
    "xarray==2025.1.2",
    "sparse==0.15.5",
    "scipy==1.15.1",
    "hydra-core==1.3.2",
    "tqdm==4.67.1",
    "polars==1.21.0",
    "zarr==3.0.3",
    "sympy==1.13.1",
    "pykan==0.2.8",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
jupyter = [
    "ipykernel",
    "jupyterlab",
]
cpu = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]
cu124 = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
